; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/mei/extr_hw-txe.c_mei_txe_sec_reg_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/mei/extr_hw-txe.c_mei_txe_sec_reg_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mei_txe_hw = type { i32 }

@.str = private unnamed_addr constant [34 x i8] c"sec read: aliveness not asserted\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mei_txe_hw*, i64)* @mei_txe_sec_reg_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mei_txe_sec_reg_read(%struct.mei_txe_hw* %0, i64 %1) #0 {
  %3 = alloca %struct.mei_txe_hw*, align 8
  %4 = alloca i64, align 8
  store %struct.mei_txe_hw* %0, %struct.mei_txe_hw** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.mei_txe_hw*, %struct.mei_txe_hw** %3, align 8
  %6 = getelementptr inbounds %struct.mei_txe_hw, %struct.mei_txe_hw* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @WARN(i32 %10, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.mei_txe_hw*, %struct.mei_txe_hw** %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @mei_txe_sec_reg_read_silent(%struct.mei_txe_hw* %12, i64 %13)
  ret i32 %14
}

declare dso_local i32 @WARN(i32, i8*) #1

declare dso_local i32 @mei_txe_sec_reg_read_silent(%struct.mei_txe_hw*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
